# testpilot-core

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LEARNINGS.md  LICENSE  README.md  SECURITY.md  install.sh  setup.sh  update.sh
.github/: agent-config.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: analyze-and-test.yml
.github/prompts/: analyze-existing-tests.prompt.md  analyze-project.prompt.md  coverage-exclusion-scan.prompt.md  dependency-graph.prompt.md  detect-tech-stack.prompt.md  fix-broken-tests.prompt.md  full-workflow.prompt.md  generate-coverage-report.prompt.md  self-learn.prompt.md  write-unit-tests.prompt.md
.github/workflows/: copilot-setup-steps.yml  release.yml
docs/: ENHANCEMENT-REPORT.md  POC-RESULTS.md  PRODUCT.md
engine/: README.md  forge-core.spec  pyproject.toml
engine/forge_core/: __init__.py  __main__.py  auth.py  cli.py  config.py  orchestrator.py
engine/forge_core/ai/: prompts.py  provider.py  structured.py
engine/forge_core/core/: agent_manager.py  coverage.py  file_manager.py  static_analyzer.py
engine/forge_core/models/: config.py  dto.py  project.py  test_result.py
engine/forge_core/phases/: analyze_project.py  audit_tests.py  compile_fix.py  coverage_report.py  detect_stack.py  exclusion_scan.py  fix_broken.py  generate_tests.py  journey_mapping.py  self_learn.py
engine/forge_core/utils/: logger.py  reporter.py  shell.py  tokens.py
knowledge-packs/: go-stdlib.md  java-spring.md  kotlin-ktor.md  node-express.md  python-fastapi.md
