[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-core"
version = "2.0.0"
description = "AI-powered backend test generation engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "TheSwitchCompany", email = "hello@theswitchcompany.online" },
]
keywords = ["testing", "ai", "code-generation", "unit-tests", "backend"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "litellm>=1.40.0",
    "instructor>=1.3.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
    "pyinstaller>=6.0",
]

[project.scripts]
forge-core = "forge_core.cli:app"

[project.urls]
Homepage = "https://theswitchcompany.online/products/forge/core"
Repository = "https://github.com/switchcompany/forge-core"
Documentation = "https://theswitchcompany.online/docs/forge-core"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
