[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "switchforge"
version = "2.0.1"
description = "AI-powered backend test generation engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "TheSwitchCompany", email = "hello@theswitchcompany.online" },
]
keywords = ["testing", "ai", "code-generation", "unit-tests", "backend"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
accurate-tokens = ["tiktoken>=0.7.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
    "pyinstaller>=6.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
switchforge = "forge_core.cli:app"

[project.urls]
Homepage = "https://theswitchcompany.online/products/forge/core"
Repository = "https://github.com/switchcompany/forge-core"
Documentation = "https://theswitchcompany.online/docs/forge-core"

[tool.hatch.build.targets.wheel]
packages = ["forge_core"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
